<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TuVanActivity">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/btn_back_tuvan"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="Tư vấn sửa chữa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:gravity="center"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <RadioButton
            android:textStyle="bold"
            android:textColor="@drawable/textcolor"
            android:background="@drawable/changebackground_tab"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:id="@+id/honda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@color/transparent"
            android:text="@string/honda"
            android:textAlignment="center" />

        <View
            android:background="@color/colorBackgroung"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:textStyle="bold"
            android:textColor="@drawable/textcolor"
            android:background="@drawable/changebackground_tab"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/suzuki"
            android:button="@color/transparent"
            android:textAlignment="center"
            android:id="@+id/suzuki"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:background="@color/colorBackgroung"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:textStyle="bold"
            android:textColor="@drawable/textcolor"
            android:background="@drawable/changebackground_tab"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/yamaha"
            android:button="@color/transparent"
            android:textAlignment="center"
            android:id="@+id/yamaha"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:background="@color/colorBackgroung"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:textStyle="bold"
            android:textColor="@drawable/textcolor"
            android:background="@drawable/changebackground_tab"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/sym"
            android:button="@color/transparent"
            android:textAlignment="center"
            android:id="@+id/sym"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:background="@color/colorBackgroung"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:textStyle="bold"
            android:textColor="@drawable/textcolor"
            android:background="@drawable/changebackground_tab"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/piaggio"
            android:button="@color/transparent"
            android:textAlignment="center"
            android:id="@+id/piaggio"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </RadioGroup>

    <View
        android:background="@color/colorBackgroung"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/txt_chon"
                android:text="@string/chonloaixe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:scrollbars="none"
        android:background="@color/colorBackgroung"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_tuvan"
            android:background="@color/colorBackgroung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>


</LinearLayout>