<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".Activity.AddressActivity">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/btn_back_adress"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="Hệ thống chi nhánh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <ScrollView
        android:scrollbars="none"
        android:background="@color/colorBackgroung"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/tru_so_chinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/txt_ads_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:id="@+id/txt_hotline_main"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="4dp"
                android:text="@string/chi_nhanh_mien_nam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_chinhanh_miennam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="4dp"
                android:text="@string/chi_nhanh_mien_trung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_chinhanh_mientrung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="4dp"
                android:text="@string/chi_nhanh_mien_bac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_chinhanh_mienbac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="4dp"
                android:text="@string/chi_nhanh_mien_dong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_chinhanh_miendong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>