<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackgroung"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager_banner"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>


            <com.viewpagerindicator.LinePageIndicator
                android:id="@+id/indicator_banner"
                app:lineWidth="24dp"
                app:gapWidth="12dp"
                app:selectedColor="@color/colorPrimary"
                app:unselectedColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>



        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView

                app:cardUseCompatPadding="true"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <LinearLayout
                android:padding="4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorLabel"
                    android:layout_gravity="center"
                    android:text="@string/chi_nhanh_gan_nhat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txt_distance"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:text="@string/txt_2km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginTop="4dp"
                    android:background="@color/colorBackgroung"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <Button
                    android:id="@+id/btn_address_home"
                    android:textStyle="bold"
                    android:textColor="@color/colorAction"
                    android:text="Xem đường đi"
                    android:background="@color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="4dp"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@color/white"
                    android:padding="4dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/colorLabel"
                        android:layout_gravity="center"
                        android:text="@string/ho_tro_truc_tiep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:text="@string/sdt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_marginTop="4dp"
                        android:background="@color/colorBackgroung"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <Button
                        android:id="@+id/btn_hotline_home"
                        android:textStyle="bold"
                        android:textColor="@color/colorAction"
                        android:text="Gọi ngay"
                        android:background="@color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>



            <LinearLayout
                android:padding="4dp"
                android:layout_margin="4dp"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_margin="4dp"
                    android:textColor="@color/colorLabel"
                    android:text="@string/bai_viet_moi_nhat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_post_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:textStyle="bold"
                    android:textColor="@color/colorAction"
                    android:background="@drawable/bg_button"
                    android:id="@+id/btn_xemthem"
                    android:layout_marginTop="4dp"
                    android:text="@string/xem_them"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>




    </LinearLayout>
</android.support.v4.widget.NestedScrollView>